Fixed Decompression From Byte File
-Cleaned up extraneous helper methods
-changed read File, it now takes in a byte file and reads by two bytes to form an arraylist of characters
-added decoompressBytToBinary method, which uses readFile and the pre-existing decompress
CURRENT PROBLEMS:
-tester shows that the decompressed message has a 'bad character', aka it shouldn't exist/doesn't make sense for the compression. Not sure if this is the compression or my decomp.