@@ -1,4 +1,8 @@
 
+
+
+import java.util.*;
+
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
@@ -42,7 +46,7 @@ public class LZW {
 	public String compress () throws UnsupportedEncodingException, FileNotFoundException, IOException
 	{
 		String output = ""; 
-		int [] compressed = new int [8000000]; 
+		int [] compressed = new int [150]; 
 		int k = 0; 
 		int i = 0; 
 		int j = 2; 
@@ -77,60 +81,83 @@ public class LZW {
 			}
 
 		}
-
+		System.out.println("compressed: "+ Arrays.toString(compressed));
+		System.out.println();
+		
 		byte [] byteOutput = new byte [2*k]; 
 		for (int x = 0; x < 2*k; x=x+2)
 		{
-			byteOutput[x] = (byte) compressed[x]; 
-			byteOutput[x+1] = (byte)(compressed[x]/256) ;
+			byteOutput[x+1] = (byte) compressed[x]; 
+			byteOutput[x] = (byte)(compressed[x]/256);
+
+			System.out.print(byteOutput[x] + ", ");
+			System.out.print(byteOutput[x+1] + ", ");
 			
 		}
+		//Print compressed/reformatted binary
+			for(byte b: byteOutput) {
+			String s1 = String.format("%8s", Integer.toBinaryString(b & 0xFF)).replace(' ', '0');
+			System.out.println(s1);
+			}
+			
 		Path file = Paths.get("output.byte");
 		Files.write(file, byteOutput);
 		return output; 
 	}
-
-	public byte[] readFileToString(String filename) throws IOException {
+	
+	//Read file to  by reading byte file and converting to int array
+	public  ArrayList<Integer> readFile(String filename) throws IOException {
 		String decompressedText = "";
 		String uncompressedString;
 		Path fileName = Path.of(filename);
-		byte[] data = Files.readAllBytes(fileName);
-		//uncompressedString = Files.readString(fileName);
+		byte[] readByteArray = Files.readAllBytes(fileName);
 
-		return data;
-
-
-	}
-
-	public int[] convertToIntArray(byte[] byteArray) {
-		int[] intArray = new int[byteArray.length];
-		for(int i = 0; i < byteArray.length; i++) {
-			intArray[i] = (int)byteArray[i];
+		System.out.println("Read byteArray: " + Arrays.toString(readByteArray));
+		ArrayList<Integer> intList = new ArrayList<Integer>();
+		for(int i =0; i< readByteArray.length; i+=2) {
+			int val = ((readByteArray[i] & 0xff) << 8) | (readByteArray[i+1] & 0xff);
+			
+			intList.add(val);
+			//int val = ((data[2] & 0xff) << 8) | (data[3] & 0xff);
 		}
-		return intArray;
+		
+		return intList;
+
+
 	}
+
+	
 
 	public String byteToBinary(byte[] bytes) {
 
 		StringBuilder sb = new StringBuilder(bytes.length * Byte.SIZE);
-		for( int i = 0; i < Byte.SIZE * bytes.length; i++ )
+		for( int i = 0; i < Byte.SIZE * bytes.length; i+=2 )
 			sb.append((bytes[i / Byte.SIZE] << i % Byte.SIZE & 0x80) == 0 ? '0' : '1');
 		return sb.toString();
 	}
-
-
-	public String decompress(int[] compressedInput) {
+	
+	public String decompressFromByteFile(String fileName) throws IOException {
+		ArrayList<Integer> intList = readFile(fileName);
+		System.out.println("IntList:" + intList.toString());
+		
+		String decompressed = decompressFromInput(intList);
+		System.out.println("decompressed:");
+		return decompressed;
+		
+	}
+	//decompresses from Array of ints (ex: [97,98,257])
+	public String decompressFromInput(ArrayList<Integer> compressedInput) {
 
 		int dictionarySize = 256;
 		Map<Integer,String> dictionary = buildDictionaryForDecompression(dictionarySize);
 
-		String word = "" + (char)(int)compressedInput[0];
+		String word = "" + (char)(int)compressedInput.get(0);
 
 		StringBuffer result = new StringBuffer(word);
 
-		for (int i = 1; i < compressedInput.length-1; i++) {
+		for (int i = 1; i < compressedInput.size()-1; i++) {
 			String entry;
-			int digit = compressedInput[i];
+			int digit = compressedInput.get(i);
 
 			if (dictionary.containsKey(digit)) {
 				entry =  dictionary.get(digit);
